// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Next.js App Router > should capture traces for incoming request and outgoing calls with app router 1`] = `
[
  {
    "direction": "outgoing",
    "request": {
      "body": {
        "contentMediaType": "application/json",
        "contentSchema": {
          "properties": {
            "http.request": {
              "maxLength": 12,
              "minLength": 12,
              "type": "string",
            },
          },
          "required": [
            "http.request",
          ],
          "type": "object",
        },
        "type": "string",
      },
      "headers": {
        "content-type": {
          "maxLength": 16,
          "minLength": 16,
          "type": "string",
        },
        "host": {
          "maxLength": 11,
          "minLength": 11,
          "type": "string",
        },
        "traceparent": {
          "maxLength": 55,
          "minLength": 55,
          "type": "string",
        },
      },
      "method": "POST",
      "query": {},
      "uri": "https://httpbin.org/anything",
    },
    "response": {
      "body": {
        "contentMediaType": "application/json",
        "contentSchema": {
          "properties": {
            "args": {
              "properties": {},
              "required": [],
              "type": "object",
            },
            "data": {
              "maxLength": 31,
              "minLength": 31,
              "type": "string",
            },
            "files": {
              "properties": {},
              "required": [],
              "type": "object",
            },
            "form": {
              "properties": {},
              "required": [],
              "type": "object",
            },
            "headers": {
              "properties": {
                "Content-Length": {
                  "maxLength": 2,
                  "minLength": 2,
                  "type": "string",
                },
                "Content-Type": {
                  "maxLength": 16,
                  "minLength": 16,
                  "type": "string",
                },
                "Host": {
                  "format": "filename",
                  "type": "string",
                },
                "Traceparent": {
                  "maxLength": 55,
                  "minLength": 55,
                  "type": "string",
                },
                "X-Amzn-Trace-Id": {
                  "maxLength": 40,
                  "minLength": 40,
                  "type": "string",
                },
              },
              "required": [
                "Content-Length",
                "Content-Type",
                "Host",
                "Traceparent",
                "X-Amzn-Trace-Id",
              ],
              "type": "object",
            },
            "json": {
              "properties": {
                "http.request": {
                  "maxLength": 12,
                  "minLength": 12,
                  "type": "string",
                },
              },
              "required": [
                "http.request",
              ],
              "type": "object",
            },
            "method": {
              "maxLength": 4,
              "minLength": 4,
              "type": "string",
            },
            "origin": {
              "maxLength": 12,
              "minLength": 12,
              "type": "string",
            },
            "url": {
              "format": "uri",
              "type": "string",
            },
          },
          "required": [
            "args",
            "data",
            "files",
            "form",
            "headers",
            "json",
            "method",
            "origin",
            "url",
          ],
          "type": "object",
        },
        "type": "string",
      },
      "headers": {
        "access-control-allow-credentials": {
          "enum": [
            "true",
            "false",
          ],
          "format": "boolean",
          "type": "string",
        },
        "access-control-allow-origin": {
          "maxLength": 1,
          "minLength": 1,
          "type": "string",
        },
        "connection": {
          "maxLength": 10,
          "minLength": 10,
          "type": "string",
        },
        "content-length": {
          "maxLength": 3,
          "minLength": 3,
          "type": "string",
        },
        "content-type": {
          "maxLength": 16,
          "minLength": 16,
          "type": "string",
        },
        "date": {
          "format": "utc-date-time",
          "type": "string",
        },
        "server": {
          "maxLength": 15,
          "minLength": 15,
          "type": "string",
        },
      },
      "statusCode": 200,
    },
  },
  {
    "direction": "outgoing",
    "request": {
      "body": null,
      "headers": {
        "accept": {
          "maxLength": 3,
          "minLength": 3,
          "type": "string",
        },
        "accept-encoding": {
          "maxLength": 17,
          "minLength": 17,
          "type": "string",
        },
        "accept-language": {
          "maxLength": 1,
          "minLength": 1,
          "type": "string",
        },
        "content-type": {
          "maxLength": 16,
          "minLength": 16,
          "type": "string",
        },
        "sec-fetch-mode": {
          "maxLength": 4,
          "minLength": 4,
          "type": "string",
        },
        "traceparent": {
          "maxLength": 55,
          "minLength": 55,
          "type": "string",
        },
        "user-agent": {
          "maxLength": 4,
          "minLength": 4,
          "type": "string",
        },
      },
      "method": "POST",
      "query": {},
      "uri": "https://httpbin.org/anything",
    },
    "response": {
      "body": {
        "contentMediaType": "application/json",
        "contentSchema": {
          "properties": {
            "args": {
              "properties": {},
              "required": [],
              "type": "object",
            },
            "data": {
              "maxLength": 17,
              "minLength": 17,
              "type": "string",
            },
            "files": {
              "properties": {},
              "required": [],
              "type": "object",
            },
            "form": {
              "properties": {},
              "required": [],
              "type": "object",
            },
            "headers": {
              "properties": {
                "Accept": {
                  "maxLength": 3,
                  "minLength": 3,
                  "type": "string",
                },
                "Accept-Encoding": {
                  "maxLength": 17,
                  "minLength": 17,
                  "type": "string",
                },
                "Accept-Language": {
                  "maxLength": 1,
                  "minLength": 1,
                  "type": "string",
                },
                "Content-Length": {
                  "maxLength": 2,
                  "minLength": 2,
                  "type": "string",
                },
                "Content-Type": {
                  "maxLength": 16,
                  "minLength": 16,
                  "type": "string",
                },
                "Host": {
                  "format": "filename",
                  "type": "string",
                },
                "Sec-Fetch-Mode": {
                  "maxLength": 4,
                  "minLength": 4,
                  "type": "string",
                },
                "Traceparent": {
                  "maxLength": 55,
                  "minLength": 55,
                  "type": "string",
                },
                "User-Agent": {
                  "maxLength": 4,
                  "minLength": 4,
                  "type": "string",
                },
                "X-Amzn-Trace-Id": {
                  "maxLength": 40,
                  "minLength": 40,
                  "type": "string",
                },
              },
              "required": [
                "Accept",
                "Accept-Encoding",
                "Accept-Language",
                "Content-Length",
                "Content-Type",
                "Host",
                "Sec-Fetch-Mode",
                "Traceparent",
                "User-Agent",
                "X-Amzn-Trace-Id",
              ],
              "type": "object",
            },
            "json": {
              "properties": {
                "fetch": {
                  "maxLength": 5,
                  "minLength": 5,
                  "type": "string",
                },
              },
              "required": [
                "fetch",
              ],
              "type": "object",
            },
            "method": {
              "maxLength": 4,
              "minLength": 4,
              "type": "string",
            },
            "origin": {
              "maxLength": 12,
              "minLength": 12,
              "type": "string",
            },
            "url": {
              "format": "uri",
              "type": "string",
            },
          },
          "required": [
            "args",
            "data",
            "files",
            "form",
            "headers",
            "json",
            "method",
            "origin",
            "url",
          ],
          "type": "object",
        },
        "type": "string",
      },
      "headers": {
        "access-control-allow-credentials": {
          "enum": [
            "true",
            "false",
          ],
          "format": "boolean",
          "type": "string",
        },
        "access-control-allow-origin": {
          "maxLength": 1,
          "minLength": 1,
          "type": "string",
        },
        "connection": {
          "maxLength": 10,
          "minLength": 10,
          "type": "string",
        },
        "content-length": {
          "maxLength": 3,
          "minLength": 3,
          "type": "string",
        },
        "content-type": {
          "maxLength": 16,
          "minLength": 16,
          "type": "string",
        },
        "date": {
          "format": "utc-date-time",
          "type": "string",
        },
        "server": {
          "maxLength": 15,
          "minLength": 15,
          "type": "string",
        },
      },
      "statusCode": 200,
    },
  },
]
`;

exports[`Next.js App Router > should capture traces for incoming request and outgoing calls with pages router 1`] = `
[
  {
    "direction": "incoming",
    "request": {
      "body": {
        "contentMediaType": "application/json",
        "contentSchema": {
          "properties": {
            "test": {
              "maxLength": 4,
              "minLength": 4,
              "type": "string",
            },
          },
          "required": [
            "test",
          ],
          "type": "object",
        },
        "type": "string",
      },
      "headers": {
        "accept": {
          "maxLength": 3,
          "minLength": 3,
          "type": "string",
        },
        "accept-encoding": {
          "maxLength": 13,
          "minLength": 13,
          "type": "string",
        },
        "accept-language": {
          "maxLength": 1,
          "minLength": 1,
          "type": "string",
        },
        "connection": {
          "maxLength": 10,
          "minLength": 10,
          "type": "string",
        },
        "content-length": {
          "maxLength": 2,
          "minLength": 2,
          "type": "string",
        },
        "content-type": {
          "maxLength": 16,
          "minLength": 16,
          "type": "string",
        },
        "host": {
          "maxLength": 15,
          "minLength": 15,
          "type": "string",
        },
        "sec-fetch-mode": {
          "maxLength": 4,
          "minLength": 4,
          "type": "string",
        },
        "user-agent": {
          "maxLength": 4,
          "minLength": 4,
          "type": "string",
        },
      },
      "method": "POST",
      "query": {},
      "uri": "http://localhost:PORT/api/pages-test",
    },
    "response": {
      "body": {
        "contentMediaType": "application/json",
        "contentSchema": {
          "properties": {
            "body": {
              "properties": {},
              "required": [],
              "type": "object",
            },
            "message": {
              "maxLength": 7,
              "minLength": 7,
              "type": "string",
            },
          },
          "required": [
            "message",
            "body",
          ],
          "type": "object",
        },
        "type": "string",
      },
      "headers": {
        "content-length": {
          "maxLength": 2,
          "minLength": 2,
          "type": "string",
        },
        "content-type": {
          "maxLength": 31,
          "minLength": 31,
          "type": "string",
        },
        "etag": {
          "maxLength": 13,
          "minLength": 13,
          "type": "string",
        },
        "vary": {
          "maxLength": 15,
          "minLength": 15,
          "type": "string",
        },
      },
      "statusCode": 200,
    },
  },
]
`;
